--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 poem = "^1"
 tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync", "parking_lot", "signal"] }
+tokio-util = { version = "^0.7" }
 anyhow = "^1"
 once_cell = "1"
 
